{
    "name": "TestControls",
    "maps": [
        {
            "name": "AndroidTest",
            "id": "87f5e291-6496-4846-b571-6de353b61b06",
            "actions": [
                {
                    "name": "ScreenPress",
                    "type": "Button",
                    "id": "83256ddb-bc26-460a-88ea-e08a38ce44da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenRelease",
                    "type": "Button",
                    "id": "8b7779d4-2d86-4746-9dcf-1e27c36d6991",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b3111c3-36b1-47e6-8021-edc7a8c27256",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "512bfeae-6b5c-47ed-a021-bbd2fad81e3b",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PCTest",
            "id": "8bd9044a-6e76-40fb-99da-7c23885d735e",
            "actions": [
                {
                    "name": "ScreenPress",
                    "type": "Button",
                    "id": "ee90801c-a421-4be3-9270-ebfbf154f411",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ad4b92e0-f46f-4f5d-a93b-a163ffe00db5",
                    "path": "<Mouse>/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}